--- a/stuff/stuff.html
+++ b/stuff/stuff.html
@@ -11,7 +11,7 @@
           <a href="" class="taskbar__name-link">Wash the car</a>
         </span>
         <span class="taskbar__folder">
-          <a href="" class="taskbar__folder-link">Inbox</a>
+          <button type="button" class="taskbar__folder-link">Inbox</button>
           <!--TODO Module-->
           <div class="edit-folder edit-folder--hidden">
             <select
